# Backend

./: .gitignore  Containerfile  Dockerfile  README.md  docker-compose.yml  example.db  log_conf.yaml  password_storage.md  pyproject.toml  requirements.txt  start_applications.bat  test_athletes.csv  values.json
.github/workflows/: docker-publish.yml
src/: main.py  main.py.orig
src/controllers/: admin_controller.py  athlete_controller.py  auth_controller.py  category_controller.py  certificate_controller.py  completes_controller.py  controller.py  csv_controller.py  exercise_controller.py  log_controller.py  logger_controller.py  password_controller.py  rule_controller.py  trainer_controller.py  user_controller.py  user_controller.py.orig
src/database/: database_setup.py  database_utils.py
src/logger/: logger.py
src/middleware/: cors.py
src/models/: category_model.py  certificate_model.py  code_model.py  complete_model.py  exercise_model.py  models.py  password_model.py  rule_model.py  user_model.py  values.py
src/schemas/: admin_schema.py  athlete_schema.py  category_schema.py  certificate_schema.py  completes_schema.py  exercise_schema.py  log_schema.py  password_schema.py  rule_schema.py  trainer_schema.py  user_schema.py
src/services/: admin_service.py  athlete_service.py  auth_service.py  category_service.py  certificate_service.py  completes_service.py  csv_service.py  exercise_service.py  log_service.py  logger_service.py  password_service.py  password_validation_service.py  rule_service.py  trainer_service.py  update_service.py  user_service.py
tests/: conftest.py  define_test_variables.py  deprecated_test_add_user.py  deprecated_test_get_user.py  integration_test_user.py  real_athletes.csv  real_completes.csv  real_completes_untrimmed.csv  run_tests.py  test_add_user.py  test_admin_controller.py  test_athlete_controller.py  test_auth_controller.py  test_category_controller.py  test_certificate_controller.py  test_completes_controller.py  test_csv.py  test_exercise_controller.py  test_get_user.py  test_hash_and_spice_password.py  test_hash_and_spice_passwort.py  test_logger.py  test_models.py  test_rules_controller.py  test_trainer_controller.py  test_validate_password.py  test_validate_passwort.py  test_values.py  user_service_test.py
